--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react": "17.0.36",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
+    "autoprefixer": "^10.4.0",
     "eslint": "^7.32.0",
     "eslint-config-airbnb": "^19.0.1",
     "eslint-config-next": "^12.0.4",
@@ -27,7 +28,9 @@
     "eslint-plugin-prettier": "^4.0.0",
     "husky": "^7.0.4",
     "lint-staged": "^12.1.2",
+    "postcss": "^8.4.4",
     "prettier": "2.5.0",
+    "tailwindcss": "^2.2.19",
     "typescript": "4.5.2"
   },
   "lint-staged": {
