--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "query-string": "^7.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-quill": "^1.3.5"
+    "react-quill": "^1.3.5",
+    "recoil": "^0.5.2",
+    "recoil-persist": "^4.0.0",
+    "swr": "^1.1.1"
   },
   "devDependencies": {
     "@types/node": "16.11.10",
