--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@tailwindcss/line-clamp": "^0.3.0",
     "axios": "^0.24.0",
     "next": "12.0.4",
     "query-string": "^7.0.1",
