--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@tailwindcss/line-clamp": "^0.3.0",
     "axios": "^0.24.0",
+    "moment": "^2.29.1",
     "next": "12.0.4",
     "query-string": "^7.0.1",
     "react": "17.0.2",
