--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "swr": "^1.1.1"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.0",
     "@types/node": "16.11.10",
     "@types/react": "17.0.36",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
     "autoprefixer": "^10.4.0",
+    "cssnano": "^5.0.13",
     "eslint": "^7.32.0",
     "eslint-config-airbnb": "^19.0.1",
     "eslint-config-next": "^12.0.4",
@@ -38,7 +40,7 @@
     "lint-staged": "^12.1.2",
     "postcss": "^8.4.4",
     "prettier": "2.5.0",
-    "tailwindcss": "^2.2.19",
+    "tailwindcss": "^3.0.7",
     "typescript": "4.5.2"
   },
   "lint-staged": {
