--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-quill": "^1.3.5",
     "recoil": "^0.5.2",
     "recoil-persist": "^4.0.0",
+    "sharp": "^0.29.3",
     "swr": "^1.1.1"
   },
   "devDependencies": {
