--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "react-dom": "17.0.2",
     "react-quill": "^1.3.5",
     "recoil": "^0.5.2",
-    "recoil-persist": "^4.0.0",
-    "swr": "^1.1.1"
+    "recoil-persist": "^4.0.0"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.0",
