--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,10 @@
 NEXT_PUBLIC_NAME=
 NEXT_PUBLIC_TITLE=
 NEXT_PUBLIC_API_URL=
+
+=KAKAO LOGIN=
+NEXT_PUBLIC_KAKAO_REST_API=
+
+=GOOGLE LOGIN=
+NEXT_PUBLIC_GOOGLE_REST_API=
+NEXT_PUBLIC_GOOGLE_CLIENT_SECRET=
